@@ -1080,7 +1080,7 @@
 - tag: ruby-script-but-no-ruby-dep
 - tag: rules-does-not-require-root
 - tag: rules-requires-root-explicitly
-- tag: rules-requires-root-missing
+- tag: rules-silently-require-root
   status: implemented
 - tag: run-parts-cron-filename-contains-illegal-chars
 - tag: runtime-test-file-is-not-a-regular-file
@@ -1311,11 +1311,9 @@
   status: classification
 - tag: upstream-metadata-is-not-a-file
 - tag: upstream-metadata-not-yaml-mapping
+  status: implemented
 - tag: upstream-metadata-yaml-invalid
-  difficulty: medium
-  comment:
-    in some cases this can be straightforward - e.g. some PHP packages
-    use JSON at the moment
+  status: implemented
 - tag: use-of-compat-symlink
 - tag: useless-autogenerated-doxygen-file
 - tag: uses-deprecated-compression-for-data-tarball
@@ -1415,6 +1413,7 @@
 - tag: pod-conversion-message
 - tag: poor-compression-in-manual-page
 - tag: recommended-field
+  status: implemented
 - tag: recursive-privilege-change
 - tag: repeated-path-segment
 - tag: required-field
@@ -1459,3 +1458,14 @@
 - tag: team/pkg-perl/vcs/no-git
 - tag: team/pkg-perl/vcs/no-team-url
 - tag: team/pkg-perl/xs-abi/legacy-vendorarch-directory
+- tag: duplicate-globbing-patterns
+- tag: globbing-patterns-out-of-order
+  difficulty: easy
+- tag: mismatched-override
+  difficulty: easy
+- tag: patch-not-forwarded-upstream
+  difficulty: hard
+- tag: redundant-globbing-patterns
+  difficulty: medium
+- tag: trimmed-deb822-field
+  difficulty: easy
