@@ -1,3 +1,3 @@
 Set priority in source stanza, since it is the same for all packages.
 Certainty: confident
-Fixed-Lintian-Tags: no-priority-field
+Fixed-Lintian-Tags: recommended-field
