@@ -1,3 +1,3 @@
 Section field set in source stanza rather than binary packages.
 Certainty: certain
-Fixed-Lintian-Tags: no-section-field-for-source
+Fixed-Lintian-Tags: recommended-field
