@@ -1,3 +1,3 @@
 Set Rules-Requires-Root: no.
 Certainty: possible
-Fixed-Lintian-Tags: rules-requires-root-missing
+Fixed-Lintian-Tags: silent-on-rules-requiring-root
